refactored css and made emergency button red

--- a/prototype/aboutcovid.html
+++ b/prototype/aboutcovid.html
@@ -28,7 +28,15 @@
 
             <!-- content goes in main -->
             <main>
+                <div>
+                    <pre>
+                        Coronaviruses are a large family of viruses that cause respiratory infections. These can range from the common cold to more serious diseases.
 
+                        COVID-19 is a disease caused by a new form of coronavirus. It was first reported in December 2019 in Wuhan City in China.
+
+                        Other coronaviruses include Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS).
+                    </pre>
+                </div>
             </main>
 
             <footer>
