--- a/prototype/services.html
+++ b/prototype/services.html
@@ -22,7 +22,7 @@
                     <a href="home_page.html">Home</a>
                     <a href="services.html">Services</a>
                     <a href="contact.html">Contact</a>
-                    <a href="emergency.html" class='nav_emergency'>Do you have an Emergency?</a>
+                    <a href="emergency.html" style='float:right'>Do you have an Emergency?</a>
                  </nav>
             </header>
 
