--- a/project/public/aboutcovid.html
+++ b/project/public/aboutcovid.html
@@ -4,7 +4,7 @@
         <title>About Covid-19</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel='stylesheet' href='/stylesheet/stylesheet.css'>
+        <link rel='stylesheet' href='/stylesheets/stylesheet.css'>
     </head>
 
     <body>
