--- a/project/public/home_page.html
+++ b/project/public/home_page.html
@@ -4,7 +4,7 @@
         <title>Homepage</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel='stylesheet' href='/stylesheet/stylesheet.css'>
+        <link rel='stylesheet' href='/stylesheets/stylesheet.css'>
         <script src="/javascript/map.js"></script>
         <script src='/javascript/login.js'></script>
         <script
