--- a/project/public/register.html
+++ b/project/public/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/stylesheet/stylesheet.css">
+    <link rel="stylesheet" href="/stylesheets/stylesheet.css">
     <script src = "login.js"></script>
     <title>Register</title>
 </head>
