adding p in footer

--- a/project/public/emergency.html
+++ b/project/public/emergency.html
@@ -34,6 +34,7 @@
 
             <footer>
                 <hr>
+                <p>© 2021 TEAM PIJA INC. ALL RIGHTS RESERVED.</p>
                 <ul>
                     <li><a href="contact.html">contact</a></li>
                     <li><a href="services.html">services</a></li>
