adding id's for contacts.html input for future query

--- a/project/public/contact.html
+++ b/project/public/contact.html
@@ -29,10 +29,10 @@
             <!-- content goes in main -->
             <main>
                 <div class='contacts_box'>
-                    <input type="text" placeholder="First Name">
-                    <input type="text" placeholder="Last Name">
-                    <input type="text" placeholder="Email">
-                    <input type="text" placeholder="What do you need help with?" class=contacts_message>
+                    <input id="fname" type="text" placeholder="First Name">
+                    <input id="lname" type="text" placeholder="Last Name">
+                    <input id="email" type="text" placeholder="Email">
+                    <input id="message" type="text" placeholder="What do you need help with?" class=contacts_message>
 
                     <div class = "login_signin_button_div">
                     <button class='login_signin_button'>Submit</button>
