adding button for qr submission

--- a/project/public/check_in.html
+++ b/project/public/check_in.html
@@ -56,6 +56,7 @@
                     <div class = "input_checkin">
                         <p>Enter the venue code:</p>
                         <input type="text" id="id" name="first_name" required minlength="3" maxlength="10" >
+                        <button class="login_signin_button">Submit</button>
                     </div>
 
                 </div>
