slight login change

--- a/project/public/login.html
+++ b/project/public/login.html
@@ -19,10 +19,8 @@
                 <h2 class="login_signin_label">
                     Sign-in
                 </h2>
-                <p>Email/ID</p>
-                <input type="text" id="login_id" name="name" required minlength="3" maxlength="10" >
-                <p>Password</p>
-                <input type="text" id="login_password" name="name" required minlength="3" maxlength="10" >
+                <label for="login_id">Email/ID</label><input type="text" id="login_id" name="name" required minlength="3" maxlength="10" >
+                <label for="login_password">Password</label><input type="password" id="login_password" name="name" required minlength="3" maxlength="10" >
                 <div class = "login_signin_button_div">
                     <button class="login_signin_button" onclick ="login()"><span>Sign-in</span></button>
                 </div>
@@ -32,6 +30,6 @@
                 </div>
             </div>
         </div>
-        
+
     </body>
 </html>
