added bg img to login, log header bg color changed, p text shadow added. Same done with register html.  Css adjusted

--- a/project/public/login.html
+++ b/project/public/login.html
@@ -8,7 +8,7 @@
         <script src = "/javascript/login.js"></script>
     </head>
 
-    <body>
+    <body class='login_body'>
         <div class='login'>
             <header>
                 <span class = "login_heading_text">covid check in</span>
