--- a/project/public/register.html
+++ b/project/public/register.html
@@ -9,7 +9,7 @@
 </head>
 
 
-<body>
+<body class='login_body'>
     <div class=login>
         <header>
             <span class = "login_heading_text">covid check in</span>
