more login fixes

--- a/project/public/login.html
+++ b/project/public/login.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-signin-client_id" content="1084311427560-st7vr3ivrvcln33ap0d65ddhfknkg81h.apps.googleusercontent.com">
         <link rel="stylesheet" href="/stylesheets/stylesheet.css">
         <title>Login</title>
         <script src = "/javascript/login.js"></script>
@@ -27,6 +28,9 @@
             </div>
         </div>
 
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     </body>
 </html>
 
