--- a/project/public/check_in.html
+++ b/project/public/check_in.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel='stylesheet' href='/stylesheets/stylesheet.css'>
-        <script src="javascripts\html5-qrcode.min.js"></script>
+        <script src="javascript\html5-qrcode.min.js"></script>
     </head>
 
     <body>
