updated qr scanner to stay on page after scanning and stop opening links for windows.

--- a/project/public/check_in.html
+++ b/project/public/check_in.html
@@ -80,8 +80,7 @@
 
         function onScanSuccess(qrCodeMessage) {
             // handle on success condition with the decoded message
-            window.open(qrCodeMessage, '_blank');
-            html5QrcodeScanner.clear();
+            alert("scan success\n" + qrCodeMessage);
             // ^ this will stop the scanner (video feed) and clear the scan area.
         }
 
