--- a/project/public/profile.html
+++ b/project/public/profile.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel='stylesheet' href='/stylesheets/stylesheet.css'>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     </head>
 
     <body>
@@ -26,9 +27,20 @@
                  </nav>
             </header>
 
+
+
             <!-- content goes in main -->
             <p>Call 000 in case of emergency</p>
             <main>
+
+            <h1>Profile</h1>
+
+            <div>
+                <p>Username:</p>
+                <p>Email:</p>
+                <p>Joined:</p>
+                <p>Risk:</p>
+            </div>
 
             </main>
 
