--- a/project/public/services.html
+++ b/project/public/services.html
@@ -23,6 +23,8 @@
                     <a href="services.html">Services</a>
                     <a href="contact.html">Contact</a>
                     <a href="emergency.html" class='nav_emergency'>Do you have an Emergency?</a>
+                    <a href="profile.html">Profile</a>
+                    <a href="history.html">History</a>
                  </nav>
             </header>
 
