--- a/project/public/profile.html
+++ b/project/public/profile.html
@@ -24,6 +24,8 @@
                     <a href="services.html">Services</a>
                     <a href="contact.html">Contact</a>
                     <a href="emergency.html" class='nav_emergency'>Do you have an Emergency?</a>
+                    <a href="profile.html">Profile</a>
+                    <a href="history.html">History</a>
                  </nav>
             </header>
 
@@ -36,10 +38,10 @@
             <h1>Profile</h1>
 
             <div>
-                <p>Username:</p>
-                <p>Email:</p>
-                <p>Joined:</p>
-                <p>Risk:</p>
+                <p>Username: johnsmith123</p>
+                <p>Email: johnsmith@gmail.com</p>
+                <p>Joined: 10/07/2020</p>
+                <p>Risk: Low</p>
             </div>
 
             </main>
