--- a/project/public/home_page.html
+++ b/project/public/home_page.html
@@ -12,6 +12,7 @@
         async></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         <script src="javascript/vueinst.js" defer></script>
+        <script src="javascript/login.js"></script>
     </head>
 
     <body>
